tests/success/push.avm
; push int8
push int8(-127)
push int8(-42)
push int8(-1)
push int8(0)
push int8(1)
push int8(42)
push int8(126)

; push int16
push int16(-32768)
push int16(-42)
push int16(-1)
push int16(0)
push int16(1)
push int16(42)
push int16(32767)

; push int32
push int32(-2147483648)
push int32(-42)
push int32(-1)
push int32(0)
push int32(1)
push int32(42)
push int32(2147483647)

; push float
push float(-99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)
push float(-42.0)
push float(-1.0)
push float(0.0)
push float(1.0)
push float(42.42)
push float(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)

; push double
push double(-99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)
push double(-42.0)
push double(-1.0)
push double(0.0)
push double(1.0)
push double(42.42)
push double(99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)

exit
